--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
 <body>
   <div class="container">
     <header>
-      <h1>🎁 Подарок для самой счастливой девочки на 8 лет!</h1>
+      <h1>🎁 Подарок для самой счастливой девочки Софии на 8 лет!</h1>
       <p class="sub">Нажимай на персонажей — каждый из них приготовил для тебя тёплое пожелание и маленькое чудо ✨</p>
     </header>
 
     <!-- Intro / Name -->
     <section class="card intro">
       <div class="row">
-        <input id="childName" type="text" placeholder="Введи имя именинницы (например: Алина)" aria-label="Имя девочки">
+        <input id="childName" type="text" placeholder="Введи имя именинницы (например: София)" aria-label="Имя девочки">
         <button id="startBtn" type="button">Начать праздник ✨</button>
       </div>
       <p style="margin:0; text-align:center; font-size:14px; opacity:.85">Имя можно изменить в любой момент.</p>
@@ -250,24 +250,24 @@
       <!-- DOG -->
       <article class="character card" data-name="dog">
         <div class="bubble"></div>
-        <div class="badge">🐶 Собака</div>
+        <div class="badge">🐶 Тедди,Виня,Дуня</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
         <div class="sprite" data-anim="bounce">
           <div class="emoji" aria-hidden="true">🐶</div>
         </div>
-        <div class="label">Собака</div>
+        <div class="label">Тедди,Виня,Дуня</div>
         <div class="cta">Нажми меня!</div>
       </article>
 
       <!-- TURTLE -->
       <article class="character card" data-name="turtle">
         <div class="bubble"></div>
-        <div class="badge">🐢 Черепаха</div>
+        <div class="badge">🐢 Наташка</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
         <div class="sprite" data-anim="wiggle">
           <div class="emoji" aria-hidden="true">🐢</div>
         </div>
-        <div class="label">Черепаха</div>
+        <div class="label">Наташка</div>
         <div class="cta">Нажми меня!</div>
       </article>
 
@@ -293,7 +293,7 @@
     </section>
 
     <footer style="text-align:center; padding: 14px; opacity:.7">
-      <small>Демо-страница. Изображения персонажей стилизованы и упрощены. Можно заменить на ваши картинки (PNG/SVG/GIF).</small>
+      <small>С ДНЕМ РОЖДЕНИЯ ОТ САШИ И ДИМЫ</small>
     </footer>
   </div>
 
