--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
       <!-- PARROT -->
       <article class="character card" data-name="parrot">
         <div class="bubble"></div>
-        <div class="badge">🦜 Попугай</div>
+        <div class="badge">🦜 Гера</div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
         <div class="sprite" data-anim="bounce">
           <div class="emoji" aria-hidden="true">🦜</div>
         </div>
-        <div class="label">Попугай</div>
+        <div class="label">Гера</div>
         <div class="cta">Нажми меня!</div>
       </article>
     </section>
@@ -288,8 +288,8 @@
     <section class="card final hidden" id="final">
       <canvas id="confettiCanvas"></canvas>
       <h2>🎂 С Днём Рождения, <span id="finalName">принцесса</span>!</h2>
-      <p class="sub2">Ты самая чудесная 8-летняя! Пусть каждый день будет полон улыбок, игр и открытий ✨</p>
-      <p style="margin-top:12px; font-size:14px; opacity:.8">Нажми на персонажей ещё раз — у них всегда есть добрые слова 💖</p>
+      <p class="sub2">Ты самая чудесная 8-летняя София! Пусть каждый день будет полон улыбок, игр и открытий ✨</p>
+      <p style="margin-top:12px; font-size:14px; opacity:.8">Нажми на своего друга ещё раз — у них всегда есть добрые слова 💖</p>
     </section>
 
     <footer style="text-align:center; padding: 14px; opacity:.7">
