--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <input id="childName" type="text" placeholder="Введи имя именинницы (например: София)" aria-label="Имя девочки">
         <button id="startBtn" type="button">Начать праздник ✨</button>
       </div>
-      <p style="margin:0; text-align:center; font-size:14px; opacity:.85">Имя можно изменить в любой момент.</p>
+      <p style="margin:0; text-align:center; font-size:14px; opacity:.85"></p>
     </section>
 
     <!-- Characters -->
