--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
         <div class="bubble"></div>
         <div class="badge">🐰 Labubu</div>
         <div class="speech" id="speech-labubu">С Днём Рождения, <span class="n"></span>! Пусть у тебя будет море улыбок и сладостей! 🍭</div>
-        <div class="sprite"<img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" bounce"> </div>
+        <div class="sprite" data-anim="bounce">
+  <img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" alt="Labubu" style="width:100%; height:100%; object-fit:contain;">
+</div>
           <!-- Simple bunny-like SVG -->
           <svg viewBox="0 0 120 120" width="120" height="120" aria-hidden="true">
             <defs>
