--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- LABUBU -->
       <article class="character card" data-name="labubu">
         <div class="bubble"></div>
-        <div class="badge">🐰 Labubu</div>
+        <div class="badge"> Labubu</div>
         <div class="speech" id="speech-labubu">С Днём Рождения, <span class="n"></span>! Пусть у тебя будет море улыбок и сладостей! 🍭</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" alt="Labubu" style="width:100%; height:100%; object-fit:contain;">
