--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <!-- STITCH -->
       <article class="character card" data-name="stitch">
         <div class="bubble"></div>
-        <div class="badge">🌌 Стич</div>
+        <div class="badge"> Стич</div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
         <div class="sprite" data-anim="wiggle">
           <!-- simple alien-ish SVG -->
