--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- LABUBU -->
       <article class="character card" data-name="labubu">
         <div class="bubble"></div>
-        <div class="badge"> Labubu</div>
+        <div class="badge"></div>
         <div class="speech" id="speech-labubu">С Днём Рождения, <span class="n"></span>! Пусть у тебя будет море улыбок и сладостей! 🍭</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" alt="Labubu" style="width:100%; height:100%; object-fit:contain;">
@@ -225,9 +225,11 @@
       <!-- STITCH -->
       <article class="character card" data-name="stitch">
         <div class="bubble"></div>
-        <div class="badge"> Стич</div>
+        <div class="badge"> </div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
-        <div class="sprite" data-anim="wiggle">
+        <div class="sprite" data-anim="bounce">
+  <img src="pngimg.com - stitch_PNG15.png" alt="STITCH" style="width:100%; height:100%; object-fit:contain;">
+</div>
           <!-- simple alien-ish SVG -->
           <svg viewBox="0 0 120 120" width="120" height="120" aria-hidden="true">
             <defs>
