--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="badge"> </div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
         <div class="sprite" data-anim="bounce">
-  <img src="pngimg.com - stitch_PNG15.png" alt="STITCH" style="width:100%; height:100%; object-fit:contain;">
+  <img src="img/pngimg.com - stitch_PNG15.png" alt="STITCH" style="width:100%; height:100%; object-fit:contain;">
 </div>
           <!-- simple alien-ish SVG -->
           <svg viewBox="0 0 120 120" width="120" height="120" aria-hidden="true">
