--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="badge">🐶 Тедди,Виня,Дуня</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
         <div class="sprite" data-anim="bounce">
-  <img src="teddy.png" alt="DOG" style="width:100%; height:100%; object-fit:contain;">
+  <img src="img/teddy.png" alt="DOG" style="width:100%; height:100%; object-fit:contain;">
 </div>
           <div class="emoji" aria-hidden="true">🐶</div>
         </div>
