--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
       <!-- DOG -->
       <article class="character card" data-name="dog">
         <div class="bubble"></div>
-        <div class="badge">🐶 Тедди,Виня,Дуня</div>
+        <div class="badge"></div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/teddy.png" alt="DOG" style="width:100%; height:100%; object-fit:contain;">
 </div>
-          <div class="emoji" aria-hidden="true">🐶</div>
+          <div class="emoji" aria-hidden="true"></div>
         </div>
         <div class="label">Тедди,Виня,Дуня</div>
         <div class="cta">Нажми меня!</div>
@@ -266,7 +266,7 @@
       <!-- TURTLE -->
       <article class="character card" data-name="turtle">
         <div class="bubble"></div>
-        <div class="badge">🐢 Наташка</div>
+        <div class="badge"></div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
         <div class="sprite" data-anim="wiggle">
           <div class="emoji" aria-hidden="true">🐢</div>
@@ -278,10 +278,10 @@
       <!-- PARROT -->
       <article class="character card" data-name="parrot">
         <div class="bubble"></div>
-        <div class="badge">🦜 Гера</div>
+        <div class="badge"></div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
         <div class="sprite" data-anim="bounce">
-          <div class="emoji" aria-hidden="true">🦜</div>
+          <div class="emoji" aria-hidden="true"></div>
         </div>
         <div class="label">Гера</div>
         <div class="cta">Нажми меня!</div>
