--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- LABUBU -->
       <article class="character card" data-name="labubu">
         <div class="bubble"></div>
-        <div class="badge"></div>
+        <div class="badge">Labubu</div>
         <div class="speech" id="speech-labubu">С Днём Рождения, <span class="n"></span>! Пусть у тебя будет море улыбок и сладостей! 🍭</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" alt="Labubu" style="width:100%; height:100%; object-fit:contain;">
@@ -225,7 +225,7 @@
       <!-- STITCH -->
       <article class="character card" data-name="stitch">
         <div class="bubble"></div>
-        <div class="badge"> </div>
+        <div class="badge">Стич</div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/pngimg.com - stitch_PNG15.png" alt="STITCH" style="width:100%; height:100%; object-fit:contain;">
@@ -245,34 +245,34 @@
             <ellipse cx="92" cy="48" rx="12" ry="6" fill="#d7f7ff"/>
           </svg>
         </div>
-        <div class="label">Стич</div>
-        <div class="cta">Нажми меня!</div>
+        <div class="label"></div>
+        <div class="cta"></div>
       </article>
 
       <!-- DOG -->
       <article class="character card" data-name="dog">
         <div class="bubble"></div>
-        <div class="badge"></div>
+        <div class="badge">Тедди,Виня,Дуня</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
         <div class="sprite" data-anim="bounce">
   <img src="img/teddy.png" alt="DOG" style="width:100%; height:100%; object-fit:contain;">
 </div>
           <div class="emoji" aria-hidden="true"></div>
         </div>
-        <div class="label">Тедди,Виня,Дуня</div>
-        <div class="cta">Нажми меня!</div>
+        <div class="label"></div>
+        <div class="cta"></div>
       </article>
 
       <!-- TURTLE -->
       <article class="character card" data-name="turtle">
         <div class="bubble"></div>
-        <div class="badge"></div>
+        <div class="badge">Наташка</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
         <div class="sprite" data-anim="wiggle">
           <div class="emoji" aria-hidden="true">🐢</div>
         </div>
-        <div class="label">Наташка</div>
-        <div class="cta">Нажми меня!</div>
+        <div class="label"></div>
+        <div class="cta"></div>
       </article>
 
       <!-- PARROT -->
