--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="bubble"></div>
         <div class="badge">Стич</div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
-        <div class="sprite" data-anim="bounce">
+        <div class="sprite" data-anim="wiggle">
   <img src="img/pngimg.com - stitch_PNG15.png" alt="STITCH" style="width:100%; height:100%; object-fit:contain;">
 </div>
           <!-- simple alien-ish SVG -->
@@ -254,7 +254,7 @@
         <div class="bubble"></div>
         <div class="badge">Тедди,Виня,Дуня</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
-        <div class="sprite" data-anim="bounce">
+        <div class="sprite" data-anim="wiggle">
   <img src="img/teddy.png" alt="DOG" style="width:100%; height:100%; object-fit:contain;">
 </div>
           <div class="emoji" aria-hidden="true"></div>
