--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@
       <!-- PARROT -->
       <article class="character card" data-name="parrot">
         <div class="bubble"></div>
-        <div class="badge"></div>
+        <div class="badge">Гера</div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
         <div class="sprite" data-anim="bounce">
           <div class="emoji" aria-hidden="true"></div>
         </div>
-        <div class="label">Гера</div>
-        <div class="cta">Нажми меня!</div>
+        <div class="label"></div>
+        <div class="cta"></div>
       </article>
     </section>
 
