--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="badge">Наташка</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
         <div class="sprite" data-anim="wiggle">
-          <div class="emoji" aria-hidden="true">🐢</div>
+          <div class="emoji" aria-hidden="true"></div>
         </div>
         <div class="label"></div>
         <div class="cta"></div>
