--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
         <div class="badge">Наташка</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
         <div class="sprite" data-anim="wiggle">
+  <img src="img/turtle.png" alt="TURTLE" style="width:100%; height:100%; object-fit:contain;">
+</div>
           <div class="emoji" aria-hidden="true"></div>
         </div>
         <div class="label"></div>
@@ -280,7 +282,9 @@
         <div class="bubble"></div>
         <div class="badge">Гера</div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
-        <div class="sprite" data-anim="bounce">
+        <div class="sprite" data-anim="wiggle">
+  <img src="img/african.png" alt="PARROT" style="width:100%; height:100%; object-fit:contain;">
+</div>
           <div class="emoji" aria-hidden="true"></div>
         </div>
         <div class="label"></div>
