--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="bubble"></div>
         <div class="badge">Labubu</div>
         <div class="speech" id="speech-labubu">С Днём Рождения, <span class="n"></span>! Пусть у тебя будет море улыбок и сладостей! 🍭</div>
-        <div class="sprite" data-anim="bounce"><img src="assets/img/labubu.png" alt="Labubu"></div>
+        <div class="sprite" data-anim="bounce"><img src="img/m8p7rj0iowgg23zi8rhgbwlkd390fq2t.png" alt="Labubu"></div>
         <div class="label">Labubu</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Labubu"></button>
       </article>
 
