--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="bubble"></div>
         <div class="badge">Стич</div>
         <div class="speech" id="speech-stitch"><span class="n"></span>, ты уникальная и очень крутая! Оставайся всегда такой же яркой! ⭐</div>
-        <div class="sprite" data-anim="wiggle"><img src="assets/img/stitch.png" alt="Стич"></div>
+        <div class="sprite" data-anim="wiggle"><img src="img/pngimg.com - stitch_PNG15.png" alt="Стич"></div>
         <div class="label">Стич</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Стич"></button>
       </article>
 
@@ -154,7 +154,7 @@
         <div class="bubble"></div>
         <div class="badge">Собака</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
-        <div class="sprite" data-anim="wiggle"><img src="assets/img/dog.png" alt="Собака"></div>
+        <div class="sprite" data-anim="wiggle"><img src="img/ted.png" alt="Собака"></div>
         <div class="label">Собака</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Собака"></button>
       </article>
 
@@ -162,7 +162,7 @@
         <div class="bubble"></div>
         <div class="badge">Черепаха</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
-        <div class="sprite" data-anim="wiggle"><img src="assets/img/turtle.png" alt="Черепаха"></div>
+        <div class="sprite" data-anim="wiggle"><img src="img/turtle.png" alt="Черепаха"></div>
         <div class="label">Черепаха</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Черепаха"></button>
       </article>
 
@@ -170,7 +170,7 @@
         <div class="bubble"></div>
         <div class="badge">Попугай</div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
-        <div class="sprite" data-anim="bounce"><img src="assets/img/parrot.png" alt="Попугай"></div>
+        <div class="sprite" data-anim="bounce"><img src="img/african.png" alt="Попугай"></div>
         <div class="label">Попугай</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Попугай"></button>
       </article>
     </section>
