--- a/index.html
+++ b/index.html
@@ -152,26 +152,26 @@
 
       <article class="character card" data-name="dog">
         <div class="bubble"></div>
-        <div class="badge">Собака</div>
+        <div class="badge">Тедди, Виня, Дуня</div>
         <div class="speech" id="speech-dog">Гав-гав! Дорогая <span class="n"></span>, верные друзья всегда рядом! 🐾</div>
         <div class="sprite" data-anim="wiggle"><img src="img/ted.png" alt="Собака"></div>
-        <div class="label">Собака</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Собака"></button>
+        <div class="label">Тедди, Виня, Дуня</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Тедди, Виня, Дуня"></button>
       </article>
 
       <article class="character card" data-name="turtle">
         <div class="bubble"></div>
-        <div class="badge">Черепаха</div>
+        <div class="badge">Наташка</div>
         <div class="speech" id="speech-turtle">Пусть мечты сбываются шаг за шагом, но уверенно, <span class="n"></span>! 💚</div>
-        <div class="sprite" data-anim="wiggle"><img src="img/turtle.png" alt="Черепаха"></div>
-        <div class="label">Черепаха</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Черепаха"></button>
+        <div class="sprite" data-anim="wiggle"><img src="img/turtle.png" alt="Наташка"></div>
+        <div class="label">Наташка</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Наташка"></button>
       </article>
 
       <article class="character card" data-name="parrot">
         <div class="bubble"></div>
-        <div class="badge">Попугай</div>
+        <div class="badge">Гера</div>
         <div class="speech" id="speech-parrot">Поздравляю, <span class="n"></span>! Желаю веселья, радости и ярких приключений! 🎉</div>
-        <div class="sprite" data-anim="bounce"><img src="img/african.png" alt="Попугай"></div>
-        <div class="label">Попугай</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Попугай"></button>
+        <div class="sprite" data-anim="bounce"><img src="img/african.png" alt="Гера"></div>
+        <div class="label">Гера</div><div class="cta">Нажми меня!</div><button class="hit" aria-label="Гера"></button>
       </article>
     </section>
 
