--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <input id="childName" type="text" placeholder="Введи имя именинницы (например: София)" aria-label="Имя девочки">
         <button id="startBtn" type="button">Начать праздник ✨</button>
       </div>
-      <p style="margin:0; text-align:center; font-size:14px; opacity:.85">Имя подставляется автоматически в поздравления.</p>
+      <p style="margin:0; text-align:center; font-size:14px; opacity:.85"></p>
     </section>
 
     <section class="grid" id="grid">
