--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <section class="card intro">
       <div class="row">
-        <input id="childName" type="text" placeholder="Введи имя именинницы (например: София)" aria-label="Имя девочки">
+        <input id="childName" type="text" placeholder="Софа =) ВВеди свое Имя" aria-label="Имя девочки">
         <button id="startBtn" type="button">Начать праздник ✨</button>
       </div>
       <p style="margin:0; text-align:center; font-size:14px; opacity:.85"></p>
