--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Подарок на 8 лет — интерактивная открытка</title>
+<title>Подарок Софии на 8 лет — интерактивная открытка</title>
 <style>
   :root{
     --bg:#fff7ff;
