--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
     const speech = card.querySelector('.speech');
     const hit = card.querySelector('.hit');
     function handle(){
-      playClick();
-      const anim = sprite.dataset.anim;
-      if(anim==='bounce') bounce(sprite); else wiggle(sprite);
-      speech.classList.remove('show'); void speech.offsetWidth;
-      speech.querySelectorAll('.n').forEach(el=> el.textContent = getName());
-      speech.classList.add('show');
-      // setTimeout(()=>{ speech.classList.remove('show'); }, 80000);
-      clickedSet.add(card.dataset.name);
-      checkFinal();
-    }
+  playClick();
+  const anim = sprite.dataset.anim;
+  if(anim==='bounce') bounce(sprite); else wiggle(sprite);
+  speech.classList.remove('show'); void speech.offsetWidth;
+  speech.querySelectorAll('.n').forEach(el=> el.textContent = getName());
+  speech.classList.add('show'); // теперь текст покажется
+  // удаляем автоскрытие, чтобы он оставался видимым
+  clickedSet.add(card.dataset.name);
+  checkFinal();
+}
     hit.addEventListener('click', handle);
     hit.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' '){ e.preventDefault(); handle(); }});
   });
